--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -5,6 +5,11 @@
       "description": "FR - Did you ever want to join the circus? Welcome to your hub for circus classes in Montréal. Hoop, silks, pole, burlesque - Oh my!"
     }
   },
+  "locales": {
+    "localeLabel": "Français",
+    "en": "Anglais",
+    "fr": "Français"
+  },
   "common": {
     "and": "et",
     "or": "ou",
