--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -7,6 +7,7 @@
   },
   "locales": {
     "localeLabel": "English",
+    "localeOther": "Français",
     "en": "English",
     "fr": "French"
   },
@@ -17,6 +18,7 @@
   },
   "home": {
     "subtitle": "Join the circus",
-    "dashboardCta": "Go to dashboard"
+    "dashboardCta": "Go to dashboard",
+    "join": "Join"
   }
 }
