--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -7,6 +7,7 @@
   },
   "locales": {
     "localeLabel": "Français",
+    "localeOther": "English",
     "en": "Anglais",
     "fr": "Français"
   },
@@ -17,6 +18,7 @@
   },
   "home": {
     "subtitle": "Viens rejoindre le cirque",
-    "dashboardCta": "Tableau de bord"
+    "dashboardCta": "Tableau de bord",
+    "join": "Rejoindre"
   }
 }
