--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -14,7 +14,18 @@
   "common": {
     "and": "and",
     "or": "or",
-    "email": "Email"
+    "email": "Email",
+    "pronouns": {
+      "she/her": "She/Her",
+      "he/him": "He/Him",
+      "they/them": "They/Them"
+    },
+    "firstName": "First Name",
+    "lastName": "Last Name",
+    "preferredName": "Preferred Name",
+    "phoneNumber": "Phone Number",
+    "pronoun": "Pronouns",
+    "preferredLanguage": "Preferred Language"
   },
   "home": {
     "subtitle": "Join the circus",
