:children_crossing: Added self-formatting phone input

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -50,7 +50,7 @@
   "profile": {
     "title": "Welcome to Envol!",
     "description": "Please fill out your profile information to continue",
-    "why": "What brings you to Kollage today?",
+    "why": "What brings you to Envol today?",
     "amStudent": "I want to take classes",
     "amInstructor": "I am an instructor",
     "amBusiness": "I am a business owner",
