--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -48,9 +48,9 @@
     "signOut": "Déconnexion"
   },
   "profile": {
-    "title": "Bienvenue chez Kollage!",
+    "title": "Bienvenue chez Envol!",
     "description": "Veuillez remplir les informations de votre profil pour continuer",
-    "why": "Qu’est-ce qui vous amène à Kollage aujourd’hui ?",
+    "why": "Qu’est-ce qui vous amène chez Envol ?",
     "amStudent": "Je veux suivre des cours",
     "amInstructor": "Je suis instructeur",
     "amBusiness": "Je gère une entreprise",
