:children_crossing: Added UX improvements to profile creation stepper

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -39,7 +39,9 @@
     "location": "Location",
     "next": "Next",
     "back": "Back",
-    "validate": "Validate"
+    "validate": "Validate",
+    "validated": "Validated",
+    "validating": "Validating"
   },
   "errors": {
     "invalidPhone": "Invalid phone number",
