--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -51,7 +51,8 @@
     "invalidPhone": "Invalid phone number - FR",
     "isRequired": "{field} is required - FR",
     "selectOptions": "Select at least one option - FR",
-    "invalidToken": "Invalid token - FR"
+    "invalidToken": "Invalid token - FR",
+    "invalidEmail": "Enter a valid email - FR"
   },
   "aria": {
     "dashboardNavigation": "Dashboard navigation - FR"
