:goal_net: Add default error page

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -48,6 +48,8 @@
     "validating": "Validating"
   },
   "errors": {
+    "wrong": "Something went wrong",
+    "pageNotFound": "Page not found",
     "invalidPhone": "Invalid phone number",
     "isRequired": "{field} is required",
     "selectOptions": "Select at least one option",
