:zap: Add cache to prisma queries

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -37,6 +37,7 @@
     "select": "Select",
     "welcome": "Welcome",
     "submit": "Submit",
+    "submitting": "Submitting",
     "title": "Title",
     "description": "Description",
     "requirements": "Requirements",
