--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -37,6 +37,7 @@
     "select": "Sélectionez",
     "welcome": "Bienvenue",
     "submit": "Soumettre",
+    "submitting": "Submitting - FR",
     "title": "Titre",
     "description": "Description",
     "requirements": "FR- Requirements",
