:recycle: Move file creation logic out of form

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -37,6 +37,7 @@
     "select": "Select",
     "welcome": "Welcome",
     "submit": "Submit",
+    "save": "Save",
     "submitting": "Submitting",
     "title": "Title",
     "description": "Description",
