:lipstick: Separate course creation UI into edit and show views

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -54,7 +54,8 @@
     "remove": "Remove",
     "selectFiles": "Select files",
     "dragAndDrop": "Drag and drop files here",
-    "images": "Images"
+    "images": "Images",
+    "edit": "Edit"
   },
   "errors": {
     "wrong": "Something went wrong",
